updates to tutorials and evaluation content

--- a/docs/concepts/durable-promise.mdx
+++ b/docs/concepts/durable-promise.mdx
@@ -155,8 +155,8 @@ It also enables the Call Graph to recover on a completely different Application 
 
 Part 2 of the quickstart tutorials showcases this functionality:
 
-- [Python SDK quickstart - Part 2 Durable Execution](/get-started/python-quickstart#part-2-durable-execution)
-- [TypeScript SDK quickstart - Part 2 Durable Execution](/get-started/typescript-quickstart#part-2-durable-execution)
+- [Python SDK quickstart - Part 2 Durable Execution](/get-started/python-quickstart#part-2-crash-recovery)
+- [TypeScript SDK quickstart - Part 2 Durable Execution](/get-started/typescript-quickstart#part-2-crash-recovery)
 
 Now let's look at the distribution aspect that is enabled by Remote storage.
 
