--- a/docs/evaluate/developer-experience/minimal-primitives.mdx
+++ b/docs/evaluate/developer-experience/minimal-primitives.mdx
@@ -1,7 +1,15 @@
 ---
 id: minimal-primitives
 title: Resonate introduces a minimal number of primitives
+description: Streamline your codebase, reduce the learning curve, and build scalable systems faster with intuitive tools that just work.
 sidebar_label: Minimal primitives
+sidebar_position: 3
+last_update:
+  date: "12-12-2024"
+tags:
+  - minimal-primitives
+  - developer-experience
+  - evaluate
 ---
 
 A **primitive** is the simplest, most basic building block used to create more complex systems or functionalities.
