--- a/docs/evaluate/features/execution-retries.mdx
+++ b/docs/evaluate/features/execution-retries.mdx
@@ -2,7 +2,7 @@
 id: execution-retries
 title: Execution retries
 sidebar_label: Execution retries
-sidebar_position: 2
+sidebar_position: 1
 description: Learn how Resonate helps your applications recover from failure.
 last_update:
   date: "10-02-2024"
@@ -10,6 +10,28 @@ tags:
   - why-resonate
   - features
 ---
+
+**Automatic function execution retries** ensure that failed functions are retried automatically when they encounter an error.
+This feature is essential for distributed applications, where function calls often depend on other services, APIs, or endpoints that may be slow, flaky, or temporarily unavailable.
+
+In a distributed application, failures are inevitable due to factors like network instability or service downtime.
+Without a retry mechanism:
+
+- A portion of your workflows may fail, disrupting user experiences.
+- Developers must write and maintain complex custom logic to handle retries.
+
+Resonate addresses these challenges by automating retries with minimal setup, improving reliability and reducing the development burden.
+
+You can define a **Retry Policy**, and Resonate will handle retries for you, ensuring seamless execution even in the face of temporary failures.
+Resonate automatically applies these retries to every function within the application’s **Call Graph**, handling errors, exceptions, or failures with ease.
+
+Retry policies are flexible and can be configured at the **Application Node** level or for individual functions, giving you fine-grained control over how your application handles transient issues.
+
+With a predefined retry policy, Resonate ensures that:
+
+- Transient issues are retried based on your specifications (e.g., backoff intervals, retry limits).
+- Your application logic remains clean and focused without additional error-handling boilerplate.
+- Failed functions across distributed services or APIs retry automatically until they succeed or meet the retry policy limit.
 
 When you use Resonate to build applications, every function in the application's [Call Graph](/concepts/call-graph) benefits from automatic retries should the execution fail or return an error or exception.
 
