--- a/docs/evaluate/features/transparent-batching.mdx
+++ b/docs/evaluate/features/transparent-batching.mdx
@@ -2,6 +2,7 @@
 id: transparent-batching
 title: Transparent batching
 sidebar_label: Batching
+sidebar_position: 4
 last_update:
   date: "12-05-2024"
 ---
