--- a/docs/get-started/python-quickstart/index.mdx
+++ b/docs/get-started/python-quickstart/index.mdx
@@ -5,7 +5,7 @@ description: Get started with the Resonate Python SDK.
 sidebar_label: Python SDK quickstart
 sidebar_position: 1
 last_update:
-  date: "10-28-2024"
+  date: "12-11-2024"
 pagination_next: null
 pagination_prev: null
 tags:
@@ -88,24 +88,28 @@ Rye automatically generates a **init**.py file and **main**.py file in the `src/
 You will start by creating a two step workflow application.
 The first step is to download content from a URL and the second step is to summarize the content.
 
-Create an **app.py** file in the `src/summarize` directory and copy and paste the code snippet below:
+Create an **app.py** file in the `src/summarize` directory and copy and paste the workflow code snippet below:
 
-<!--SNIPSTART quickstart-py-part-1-app-->
+<!--SNIPSTART quickstart-py-part-1-app {"selectedLines":["1-3", "5-7", "9-46"]}-->
 
 [quickstart/part-1/src/summarize/app.py](https://github.com/resonatehq/examples-py/blob/main/quickstart/part-1/src/summarize/app.py)
 
 ```py
+from resonate.context import Context
 from resonate.stores.local import LocalStore, MemoryStorage
 from resonate.resonate import Resonate
-from resonate.context import Context
+# ...
 import random
 import time
+
+# ...
 
 # Create a Resonate instance with a local store
 resonate = Resonate(store=LocalStore(MemoryStorage()))
 
 
-# Define and register the downloadAndSummarize function
+# Define the downloadAndSummarize workflow
+# Register it with Resonate as a top-level orchestrating generator
 @resonate.register
 def downloadAndSummarize(ctx: Context, url: str):
     print("Downloading and summarizing content from", url)
@@ -137,8 +141,6 @@ def summarize(ctx: Context, url: str, content: str):
         raise Exception("Failed to summarize content")
     print("Summarization successful")
     return f"This is the summary of {url}."
-
-
 ```
 
 <!--SNIPEND-->
@@ -164,19 +166,22 @@ Local memory enables the application to provide automtic retries for application
 
 :::
 
-Next you will create an HTTP service with a single route handler.
-The handler will use `resonate.run()` to invoke the summarization application enabling Resonate to supervise the execution of the functions and ensure they complete.
-Create a file named `gateway.py` and paste in the following code:
+Next you will turn your app into an HTTP service with a single route handler.
+The handler will use Resonate's `.run()` method to invoke the summarization workflow enabling Resonate to supervise the execution of the functions and ensure they complete.
+In your `app.py` add the import to the top of the file, and then add the HTTP route handler below the `downloadAndSummarize()` workflow code.
 
-<!--SNIPSTART quickstart-py-part-1-gateway-->
+<!--SNIPSTART quickstart-py-part-1-app {"selectedLines": ["4", "7-9", "47-78"]}-->
 
-[quickstart/part-1/src/summarize/gateway.py](https://github.com/resonatehq/examples-py/blob/main/quickstart/part-1/src/summarize/gateway.py)
+[quickstart/part-1/src/summarize/app.py](https://github.com/resonatehq/examples-py/blob/main/quickstart/part-1/src/summarize/app.py)
 
 ```py
+# ...
 from flask import Flask, request, jsonify
-from summarize.app import downloadAndSummarize
+# ...
 
 app = Flask(__name__)
+
+# ...
 
 
 # Define a route handler for the /summarize endpoint
@@ -214,7 +219,9 @@ if __name__ == "__main__":
 <!--SNIPEND-->
 
 When executed, the previous code example initializes an HTTP Server listening to the `/summarize` route on port 5000.
-When a request comes in, the HTTP Server extracts the URL from the request, runs the `downloadAndSummarize()` function with Resonate's `.run()`, and returns the result as JSON.
+When a request comes in, the HTTP Server extracts the URL from the request, runs the `downloadAndSummarize()` function with Resonate's `.run()` method, and returns the result as JSON.
+
+![downloadAndSummarize Call Graph diagram](/img/downloadAndSummarize-call-graph.svg)
 
 When calling Resonate's `.run()` method you must provide a unique identifier and the function’s arguments.
 The identifier serves as the [Durable Promise ID](/concepts/durable-promise#identity) that correlates to the function invocation.
@@ -224,11 +231,11 @@ The function may be executed as many times as needed to complete and resolve the
 If you use the same identifier for multiple calls to the `.run()` method, you will receive the result from the initial execution without re-running the function.
 To get a new result on each call, you need to supply a different promise ID.
 
-Lastly, make sure to update your `pyproject.toml` file to includes the following scripts:
+Lastly, make sure to update your `pyproject.toml` file to have the following scripts:
 
 ```toml
 [project.scripts]
-    "app" = "summarize.gateway:main"
+    "app" = "summarize.app:main"
 ```
 
 Rerun the sync command after updating the `pyproject.toml` file:
@@ -296,20 +303,21 @@ resonate serve
 
 By default, the Resonate Server runs on localhost port 8001 using an SQLite database.
 
-After the server is running, you can update your service code.
+After the server is running, you can update your application code.
 
 There are two places where you need to update your code for this part of the tutorial.
 
-First, in your `app.py` file import the `RemoteServer` and pass an instance of it to the `Resonate` constructor, while providing the URL of the Resonate Server.
+First, in your `app.py` file switch from importing `LocalStore` and `MemoryStorage` to importing `RemoteStore` and pass an instance of it to the `Resonate` constructor, while providing the URL of the Resonate Server.
 In this case, the URL of the server is `http://localhost:8001`.
 
-<!--SNIPSTART quickstart-py-part-2-app {"selectedLines": ["1","7-8"]}-->
+<!--SNIPSTART quickstart-py-part-2-app {"selectedLines": ["1","9-11"]}-->
 
 [quickstart/part-2/src/summarize/app.py](https://github.com/resonatehq/examples-py/blob/main/quickstart/part-2/src/summarize/app.py)
 
 ```py
 from resonate.stores.remote import RemoteStore
 # ...
+
 # Create an instance of Resonate with a remote promise store
 resonate = Resonate(store=RemoteStore(url="http://localhost:8001"))
 ```
@@ -318,13 +326,14 @@ resonate = Resonate(store=RemoteStore(url="http://localhost:8001"))
 
 Next, add a 10 second sleep to the `downloadAndSummarize()` function between `download()` and `summarize()`.
 
-<!--SNIPSTART quickstart-py-part-2-app {"selectedLines": ["11-26"]}-->
+<!--SNIPSTART quickstart-py-part-2-app {"selectedLines": ["14-30"]}-->
 
 [quickstart/part-2/src/summarize/app.py](https://github.com/resonatehq/examples-py/blob/main/quickstart/part-2/src/summarize/app.py)
 
 ```py
 # ...
-# Define and register the downloadAndSummarize function with Resonate
+# Define the downloadAndSummarize workflow
+# Register it with Resonate as a top-level orchestrating generator
 @resonate.register
 def downloadAndSummarize(ctx: Context, url: str):
     print("Downloading and summarizing content from", url)
@@ -351,7 +360,7 @@ Now that you have your code updated, it is time to simulate a service outage.
 If you haven't already, restart your HTTP service with the updated code.
 
 ```shell
-rye run app-node
+rye run app
 ```
 
 After your service is running with the updated code, send the `POST` request to your service.
@@ -364,8 +373,8 @@ Let it run it until you see the log "download successful", then kill (Ctrl-c) th
 
 :::tip Durable Execution in action
 
-In the first part of the tutorial, killing the HTTP Server would have resulted in the loss of the state of the executions.
-However, because the service is connected to the Resonate Server, when you bring the service back up, the execution sequence continues from where it left off.
+In the first part of the tutorial, killing the application would have resulted in the loss of the state of the executions.
+However, because the service is now connected to the Resonate Server, when you bring the service back up, the execution sequence continues from where it left off.
 
 :::
 
@@ -436,85 +445,138 @@ Next, you will separate the HTTP Server from the application code and run multip
 
 ## Part 3 Fan-out/Fan-in
 
-In this part of the tutorial, you will separate the HTTP service from the Application Node code so that they can run independently.
+In this part of the tutorial, you will separate the HTTP service code from the Application Node code so that the HTTP service and the workflow code can run in different processes.
 Once separated you will run multiple Application Nodes and send multiple requests to the HTTP service and see which Application Node picks up the work.
 
-Start by converting from a Local Function Invocation to a Remote Function Invocation.
-In the `gateway.py` file, remove the import of the `downloadAndSummarize` function from the `app.py` file.
-Also, remove the registration of the function with the instance of Resonate.
-Then, change `resonate.run()` to `resonate.rfi()`, and don't await on the result of the workflow.
+![downloadAndSummmarize Fan-out/Fan-in diagram](/img/downloadAndSummarize-call-graph-fan-out-fan-in.svg)
 
-<!--SNIPSTART quickstart-py-part-3-gateway {"selectedLines": ["11-13", "23-32"]}-->
+Start by creating a new file `gateway.py` in `src/summarize`.
+
+Move the HTTP service code from `app.py` to `gateway.py`.
+You will also need to update the instantiation of the Resonate specify a task source and the method by which the tasks are acquired.
+And lastly you will need to introduce a `dispatch()` function which can be invoked with Resonate's `.run()` method.
+
+It should look like the following:
+
+<!--SNIPSTART quickstart-py-part-3-gateway-->
 
 [quickstart/part-3/src/summarize/gateway.py](https://github.com/resonatehq/examples-py/blob/main/quickstart/part-3/src/summarize/gateway.py)
 
 ```py
-# ...
+# highlight-next-line
+from resonate.task_sources.poller import Poller
+from resonate.stores.remote import RemoteStore
+from resonate.resonate import Resonate
+from resonate.context import Context
+
+# highlight-next-line
+from resonate.targets import poll
+from flask import Flask, request, jsonify
+
+
+app = Flask(__name__)
+
+# Create an instance of Resonate
+resonate = Resonate(
+    store=RemoteStore(url="http://localhost:8001"),
+    # highlight-next-line
+    task_source=Poller(url="http://localhost:8002", group="gateway"),
+)
+
+
+# highlight-start
+# Define and register a top-level orchestrator coroutine
+@resonate.register
+def dispatch(ctx: Context, url: str):
+    yield ctx.rfi("downloadAndSummarize", url).options(
+        send_to=poll("summarization-nodes")
+    )
+    return
+
+
+# highlight-end
+
+
 # Define a route handler for the /summarize endpoint
 @app.route("/summarize", methods=["POST"])
 def summarize_route_handler():
-# ...
+    try:
+        # Extract JSON data from the request
+        data = request.get_json()
+        if "url" not in data:
+            return jsonify({"error": "URL not provided"}), 400
+
+        # Extract the URL from the request
+        url = data["url"]
+
         # Use a Remote Function Invocation
-        resonate.rfi(
-            promise_id=f"downloadAndSummarize-{url}",
-            func_name="downloadAndSummarize",
-            args=[url],
-            target="summarization-nodes",
-        )
+
+        # highlight-next-line
+        dispatch.run(id=f"downloadAndSummarize-{url}", url=url)
 
         # Return the result as JSON
         return jsonify({"summary": "workflow started"}), 200
-```
-
-<!--SNIPEND-->
-
-The decision to not await on the result of the workflow in the gateway is purely so that you can start multiple workflows concurrently and see which Application Node picks up the work.
-
-Next, update the `app.py` file with the following changes:
-
-- Import the `Scheduler` and `RemoteStore`.
-- Connect to the Resonate Server, specifying the logic group as `summarization-nodes`.
-- Remove durability from the Local Function Incovations to `download()` and `summarize()`.
-- Register the top-level `downloadAndSummarize()` function.
-- Add a `main()` function that starts the Application Node.
-
-<!--SNIPSTART quickstart-py-part-3-app {"selectedLines": ["1-2", "6-11", "47-61"]}-->
-
-[quickstart/part-3/src/summarize/app.py](https://github.com/resonatehq/examples-py/blob/main/quickstart/part-3/src/summarize/app.py)
-
-```py
-from resonate.storage.resonate_server import RemoteServer
-from resonate.scheduler import Scheduler
-# ...
-
-resonate = Scheduler(
-    RemoteServer(url="http://localhost:8001"), logic_group="summarization-nodes"
-)
+    except Exception as e:
+        return jsonify({"error": str(e)}), 500
 
 
-# ...
-resonate.register(
-    name="downloadAndSummarize",
-    func=downloadAndSummarize,
-)
-
-
-# Define a main function to start the Application Node
+# Define a main function to start the Flask app
 def main():
-    print("App node running")
-    resonate.wait_forever()
+    app.run(host="127.0.0.1", port=5000)
+    print("Serving HTTP on port 5000...")
 
 
 # Run the main function when the script is executed
 if __name__ == "__main__":
     main()
+
 ```
 
 <!--SNIPEND-->
 
-The `resonate.wait_forever()` call ensures the Application Node runs indefinitely as a worker service.
+In the previous code example, the highlighted lines indicate the changes you will need to make after moving the HTTP service code to `gateway.py`.
 
-Finally, update the `[project.scripts]` section of your `pyproject.toml` file to include the following scripts:
+The `dispatch()` function uses `ctx.rfi()`, a [Remote Function Invocation](/concepts/distributed-async-await#remote-function-invocation), to invoke the `downloadAndSummarize()` workflow.
+**Note** that in future iterations of the SDK, Remote Function Invocations should be possible directly from the `Resonate` instance.
+
+The decision to not await on the result of the workflow in the gateway is purely so that you can start multiple workflows concurrently and see which Application Node picks up the work.
+
+Next, update the `app.py` file with the following changes:
+
+- Update the instantiation of the Resonate instance to specify a task source and a method by which the tasks are acquired.
+- Import `Event` from `threading` and unpdate the `main()` function so that the Application Node stays alive waiting on thread events.
+
+<!--SNIPSTART quickstart-py-part-3-app {"selectedLines": ["1-11", "54-60"]}-->
+
+[quickstart/part-3/src/summarize/app.py](https://github.com/resonatehq/examples-py/blob/main/quickstart/part-3/src/summarize/app.py)
+
+```py
+# highlight-next-line
+from resonate.task_sources.poller import Poller
+from resonate.stores.remote import RemoteStore
+from resonate.resonate import Resonate
+from resonate.context import Context
+
+# highlight-next-line
+from threading import Event
+import random
+import time
+
+# ...
+
+
+# Define a main function to start the Application Node
+def main():
+    print("App node running")
+    # highlight-next-line
+    Event().wait()
+```
+
+<!--SNIPEND-->
+
+The addition of `Event().wait()` ensures the Application Node runs indefinitely as a worker service.
+
+Finally, update the `[project.scripts]` section of your `pyproject.toml` file to include the gateway script:
 
 ```toml
 [project.scripts]
@@ -533,7 +595,7 @@ rye run gateway
 Then open two more terminals and in each one run an Application Node:
 
 ```shell
-rye run app-node
+rye run app
 ```
 
 Open one more terminal and use it to send multiple cURL requests to the HTTP service:
@@ -558,47 +620,51 @@ But you can also create a promise that is resolved by an external process, such 
 Let's update the application (`app.py`) to send the summarization of the text to a human for review.
 In this case we will pretend the summarization is sent in an email and that it contains two links: one link to accept the summarization as correct and another link to reject it, requiring the application to try summarizing the content again.
 
-Therefore the `summarization()` function and `send_email()` function will be inside a loop that will continue until the summarization is accepted.
+Therefore the `summarization()` function and a new `send_email()` function will be inside a loop that will continue until the summarization is accepted.
 
-<!--SNIPSTART quickstart-py-part-4-app {"selectedLines": ["13", "19-39", "61-72"]}-->
+<!--SNIPSTART quickstart-py-part-4-app {"selectedLines": ["16-43", "65-75"]}-->
 
 [quickstart/part-4/src/summarize/app.py](https://github.com/resonatehq/examples-py/blob/main/quickstart/part-4/src/summarize/app.py)
 
 ```py
 # ...
+# Define and register the downloadAndSummarize workflow
+@resonate.register
 def downloadAndSummarize(ctx: Context, url: str, email: str):
-# ...
-    count = 1
+    print("Downloading and summarizing content from", url)
+    # Download the content from the provided URL
+    content = yield ctx.lfc(download, url)
+    # Add a delay so you have time to simulate a failure
+    time.sleep(10)
     while True:
         # Summarize the downloaded content
-        summary = yield ctx.lfc(summarize, url, content).with_options(
-            promise_id=f"sumarize-{url}-{count}"
-        )
+        summary = yield ctx.lfc(summarize, url, content)
+
+        # Create a Durable Promise to wait for confirmation
+        promise = yield ctx.rfi(DurablePromise(id=None))
+
         # Send an email with the summary
-        yield ctx.lfc(send_email, summary, url, email, count).with_options(
-            promise_id=f"summarization-email-{url}-{count}"
-        )
+        yield ctx.lfc(send_email, summary, email, promise.id)
+
+        # Wait for the summary to be accepted or rejected
         print("Waiting on confirmation")
-        confirmed = yield ctx.rfc(
-            CreateDurablePromiseReq(
-                promise_id=f"sumarization-confirmed-{url}-{count}",
-            )
-        )
+        confirmed = yield promise
+
         if confirmed:
             break
-        count += 1
+
     print("Workflow complete")
     return
+
 # ...
 
-
-def send_email(ctx: Context, summary: str, url: str, email: str, attempt: int):
+def send_email(ctx: Context, summary: str, email: str, promise_id: str):
     print(f"Summary: {summary}")
     print(
-        f"Click to confirm: http://localhost:5000/confirm?url={url}&confirm=true&attempt={attempt}"
+        f"Click to confirm: http://localhost:5000/confirm?confirm=true&promise_id={promise_id}"
     )
     print(
-        f"Click to reject: http://localhost:5000/confirm?url={url}&confirm=false&attempt={attempt}"
+        f"Click to reject: http://localhost:5000/confirm?confirm=false&promise_id={promise_id}"
     )
     print("Email sent successfully")
     return
@@ -606,47 +672,60 @@ def send_email(ctx: Context, summary: str, url: str, email: str, attempt: int):
 
 <!--SNIPEND-->
 
-Notice that `with_options` enables us to specify promise IDs for the `summarize()` and `send_email()` functions.
-We do this so that we can invoke the functions again if the summarization is rejected.
-Otherwise, the default promise ID would be used and the function would not be re-invoked.
+In the previous code example, the `downloadAndSummarize()` function now includes a loop that continues until the summarization is accepted.
+The entire workflow will wait until the promise is resolved by the human-in-the-loop.
+And the loop will break if the data we receive via the promise resolution is `true`, and continue if `false`.
 
 Next, update the `gateway.py` file to include a route handler for the `/confirm` endpoint.
 This route handler resolves the promise created inside the loop that blocks progress after sending the email.
 Use a `GET` endpoint so that our links work in the browser.
+Additionally, make sure to separate the instance of the `RemoteStore()` into a global variable so that it can be accessed by the route handler.
 
-<!--SNIPSTART quickstart-py-part-4-gateway-confirm-route-->
+<!--SNIPSTART quickstart-py-part-4-gateway {"selectedLines":["11-17", "49-79"]}-->
 
 [quickstart/part-4/src/summarize/gateway.py](https://github.com/resonatehq/examples-py/blob/main/quickstart/part-4/src/summarize/gateway.py)
 
 ```py
+# ...
+# Create an instance of Resonate
+# highlight-next-line
+store = RemoteStore(url="http://localhost:8001")
+resonate = Resonate(
+    store=store, task_source=Poller(url="http://localhost:8002", group="gateway")
+)
+
+# ...
+
+# Define a route handler for the /confirm endpoint
 @app.route("/confirm", methods=["GET"])
 def confirm_email_route_handler():
     global store
     try:
-        url = request.args.get("url")
+        # Extract parameters from the request
+        promise_id = request.args.get("promise_id")
         confirm = request.args.get("confirm")
-        attempt = request.args.get("attempt")
+
         # Check if the required parameters are present
-        if not url or confirm is None or attempt is None:
+        if not promise_id or confirm is None:
             return jsonify({"error": "url and confirmation params are required"}), 400
+
         # Convert to boolean
         confirm = confirm.lower() == "true"
+
         # Resolve the promise
         store.resolve(
-            promise_id=f"sumarization-confirmed-{url}-{attempt}",
+            id=promise_id,
             ikey=None,
             strict=False,
             headers=None,
             data=json.dumps(confirm),
         )
         if confirm:
-            return jsonify({"message": f"Summarization confirmed."}), 200
+            return jsonify({"message": "Summarization confirmed."}), 200
         else:
-            return jsonify({"message": f"Summarization rejected."}), 200
+            return jsonify({"message": "Summarization rejected."}), 200
     except Exception as e:
         return jsonify({"error": str(e)}), 500
-
-
 ```
 
 <!--SNIPEND-->
@@ -682,48 +761,48 @@ rye add selenium bs4 ollama
 Next, make and propagate a change to `gateway.py` that creates a "clean" URL for use in promise IDs and file paths.
 A "clean" URL removes the `http://` and `https://` and replaces all "/" with "-".
 
-<!--SNIPSTART quickstart-py-part-5-gateway {"selectedLines": ["5-6", "14-16", "26-37", "41-44", "55-59", "71-75"]}-->
+<!--SNIPSTART quickstart-py-part-5-gateway {"selectedLines": ["19-32", "40-52", "84-90"]}-->
 
 [quickstart/part-5/src/summarize/gateway.py](https://github.com/resonatehq/examples-py/blob/main/quickstart/part-5/src/summarize/gateway.py)
 
 ```py
 # ...
-import re
+# highlight-start
+@resonate.register
+def dispatch(ctx: Context, url: str, clean_url: str, email: str):
+    yield ctx.rfi("downloadAndSummarize", url, clean_url, email).options(
+        send_to=poll("summarization-nodes")
+    )
+    return
+    # highlight-end
 
-# ...
+
 # Define a route handler for the /summarize endpoint
 @app.route("/summarize", methods=["POST"])
 def summarize_route_handler():
+    try:
 # ...
+        email = data["email"]
         # highlight-next-line
         clean_url = clean(url)
 
         # Use a Remote Function Invocation
-        resonate.rfi(
-            promise_id=f"downloadAndSummarize-{clean_url}",
-            func_name="downloadAndSummarize",
-            args=[url, clean_url, email],
-            target="summarization-nodes",
-        )
+        # highlight-next-line
+        dispatch.run(f"downloadAndSummarize-{clean_url}", url, clean_url, email)
 
         # Return the result as JSON
+        return jsonify({"summary": "workflow started"}), 200
+    except Exception as e:
+        return jsonify({"error": str(e)}), 500
+
 # ...
 
-
-@app.route("/confirm", methods=["GET"])
-def confirm_email_route_handler():
-# ...
-        # highlight-next-line
-        clean_url = clean(url)
-        # Resolve the promise
-        store.resolve(
-            promise_id=f"sumarization-confirmed-{clean_url}-{attempt}",
-# ...
-
-
+# highlight-start
 def clean(url):
     tmp = re.sub(r"^https?://", "", url)
     return tmp.replace("/", "-")
+    # highlight-end
+
 ```
 
 <!--SNIPEND-->
@@ -732,46 +811,31 @@ You are doing this because the webscraper requires a full-path URL to scrape the
 In previous examples, you may have been providing "example.com" as the URL.
 This change ensures that we can provide a full-path URL to the webscraper and ensures that the promise ID and file path are clean, easy to read, and valid.
 
-There are a few more places in `app.py` where you will make the distriction between using the clean URL vs the full-path URL.
+There are a few more places in `app.py` where you will make the distiction between using the clean URL vs the full-path URL.
 
-You will also want to add `.with_options(durable=False)` to the invocation of the `download()` function to disable durability for the downloaded content.
+You will also want to add `.options(durable=False)` to the invocation of the `download()` function to disable durability for the downloaded content.
 
-<!--SNIPSTART quickstart-py-part-5-app {"selectedLines": ["16-40", "46-49"]}-->
+<!--SNIPSTART quickstart-py-part-5-app {"selectedLines": ["20-27", "47-52"]}-->
 
 [quickstart/part-5/src/summarize/app.py](https://github.com/resonatehq/examples-py/blob/main/quickstart/part-5/src/summarize/app.py)
 
 ```py
 # ...
-# highlight-next-line
+# highlight-start
+@resonate.register
 def downloadAndSummarize(ctx: Context, url: str, clean_url: str, email: str):
+    # highlight-end
     print("Downloading and summarizing content from", url)
     # Download the content from the provided URL
     # highlight-next-line
-    filename = yield ctx.lfc(download, url, clean_url).with_options(durable=False)
-    count = 1
-    while True:
-        # Summarize the downloaded content
-        summary = yield ctx.lfc(summarize, url, filename).with_options(
-            # highlight-next-line
-            promise_id=f"sumarize-{clean_url}-{count}"
-        )
-        # Send an email with the summary
-        yield ctx.lfc(send_email, summary, url, email, count).with_options(
-            # highlight-next-line
-            promise_id=f"summarization-email-{clean_url}-{count}"
-        )
-        print("Waiting on confirmation")
-        confirmed = yield ctx.rfc(
-            CreateDurablePromiseReq(
-                # highlight-next-line
-                promise_id=f"sumarization-confirmed-{clean_url}-{count}",
-            )
-        )
+    filename = yield ctx.lfc(download, url, clean_url).options(durable=False)
 # ...
 
 
 # highlight-next-line
 def download(ctx: Context, url: str, clean_url: str):
+    filename = f"{clean_url}.txt"
+
 ```
 
 <!--SNIPEND-->
@@ -784,24 +848,30 @@ If we store all that data into a Durable Promise, this could drastically affect 
 
 Therefore, we want to store the downloaded content on the Application Node.
 If we do that, then we need to turn off durability for the invocation of the `download()` function, so that if the workflow resumes on another Application Node, the content will re-download on that node.
+That is what we did with adding `.options(durable=False)` to the invocation of the `download()` function.
 
 Next, update the `download()` function to use Selenium and Beautiful Soup to scrape the content from the URL.
 
-<!--SNIPSTART quickstart-py-part-5-app {"selectedLines": ["48-64"]}-->
+<!--SNIPSTART quickstart-py-part-5-app {"selectedLines": ["50-71"]}-->
 
 [quickstart/part-5/src/summarize/app.py](https://github.com/resonatehq/examples-py/blob/main/quickstart/part-5/src/summarize/app.py)
 
 ```py
 # ...
-# highlight-next-line
 def download(ctx: Context, url: str, clean_url: str):
+    filename = f"{clean_url}.txt"
+
+    # Check if the file already exists
+    if os.path.exists(filename):
+        print(f"File {filename} already exists. Skipping download.")
+        return filename
+
     print(f"Downloading data from {url}")
     try:
         driver = webdriver.Chrome()
         driver.get(url)
         soup = BeautifulSoup(driver.page_source, "html.parser")
         content = soup.get_text()
-        filename = f"{clean_url}.txt"
         with open(filename, "w", encoding="utf-8") as f:
             f.write(content)
         driver.quit()
@@ -819,7 +889,7 @@ Notice that the filename is now returned and stored in the Durable Promise inste
 
 Next, update the `summarize()` function to read the file and use Ollama to summarize the content.
 
-<!--SNIPSTART quickstart-py-part-5-app {"selectedLines": ["67-89"]}-->
+<!--SNIPSTART quickstart-py-part-5-app {"selectedLines": ["74-96"]}-->
 
 [quickstart/part-5/src/summarize/app.py](https://github.com/resonatehq/examples-py/blob/main/quickstart/part-5/src/summarize/app.py)
 
