--- a/docs/evaluate/developer-experience/index.mdx
+++ b/docs/evaluate/developer-experience/index.mdx
@@ -4,8 +4,12 @@ title: Resonate's developer experience
 sidebar_label: Developer experience
 description: Learn about the developer experience of Resonate and how it helps you build applications for the cloud.
 last_update:
-  date: "12-05-2024"
+  date: "12-12-2024"
 ---
+
+Developer experience encompasses all aspects of how developers interact with and use the tools, systems, and processes that enable software development.
+A great developer experience reduces friction, fosters productivity, and encourages innovation by making tools intuitive, efficient, and enjoyable to use.
+Here are some ways Resonate enhances the developer experience.
 
 import DocCardList from "@theme/DocCardList";
 import { useCurrentSidebarCategory } from "@docusaurus/theme-common";
